[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "koppengeiger"
version = "1.0.3"
description = "generates rasters of Köppen-Geiger land-cover classification"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rasters"
]

requires-python = ">=3.11"

[tool.setuptools.package-data]
koppengeiger = ["*.txt", "*.tif"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/koppengeiger"
